# yodlee-rs

./: .gitignore  Cargo.toml  README.md
src/: account.rs  error.rs  lib.rs  token_manager.rs  user.rs
src/models/: account.rs  account_address.rs  account_dataset.rs  account_history.rs  account_holder.rs  account_profile.rs  auto_refresh.rs  bank_transfer_code.rs  coverage.rs  coverage_amount.rs  email.rs  full_account_number_list.rs  historical_balance.rs  identifier.rs  loan_payoff_details.rs  mod.rs  money.rs  name.rs  payment_bank_transfer_code.rs  payment_identifier.rs  payment_profile.rs  phone_number.rs  reward_balance.rs  user.rs
tests/: admin_token.rs  client.rs
